# pr-guardian

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  LOCAL_SETUP.md  README.md  REQUIREMENTS.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.kiro/steering/: git-conventions.md
agent-core/: diff_utils.py  exceptions.py  fingerprint.py  llm_client.py  main.py  prompt_loader.py  schemas.py
agent-core/prompts/: history_prompt.md  security_prompt.md  style_prompt.md
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/status/: route.ts
dashboard/components/: CommentPreview.tsx  PRCard.tsx  ThemeToggle.tsx
github-integration/: ARCHITECTURE_DIAGRAMS.md  github_client.py  server.py  test_webhook.py  webhook_handler.py
scripts/: dev.sh
store/: __init__.py  context_cache.py  db.py  history_store.py  job_store.py  stages.py
tests/: fakes.py  test_pr_guardian.py
worker/: base.py  celery_app.py  exceptions.py  mcp_client.py  tasks.py
